--- a/Views/app.html
+++ b/Views/app.html
@@ -1,1 +1,7 @@
-<p>test app page 43210</p>
+<div ng-controller="FedsAppView"> 
+    <div class="chart-container" style="position: relative">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
+    <script src="https://linnacademy.linnapp.com/Views/Simple/Views/FedsApp.js"></script>
+    <canvas id="myBarChart"></canvas>     
+    </div>
+    </div>
