--- a/Views/app.html
+++ b/Views/app.html
@@ -1,14 +1,15 @@
 <div ng-controller="PayUsingPayoneerView">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <button id="show-modal-btn">Open Modal</button>
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Open Modal</button>
 
-    <div id="myModal" class="md-dialog">
-        <div class="md-dialog-window">
-            <div class="md-dialog-header">
-                <div class="md-dialog-header-close-btn"></div>
-                <div class="md-dialog-header-text">$header</div>
-            </div>
-            <div class="md-dialog-content">$content</div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Some text in the Modal..</p>
         </div>
+
     </div>
 </div>
