--- a/Views/styles.css
+++ b/Views/styles.css
@@ -1,74 +1,37 @@
-.md-dialog {
-    display: none;
-    position: fixed;
-    z-index: 1;
+ /* The Modal (background) */
+ .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
-  .md-dialog.md-dialog-visible {
-    display: block;
-  }
-  .md-dialog .md-dialog-window {
-    border: 1px solid #888;
+  
+  /* Modal Content/Box */
+  .modal-content {
     background-color: #fefefe;
-    width: 80%;
-    margin: 10% auto;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
   }
-  .md-dialog .md-dialog-header {
-    position: relative;
-    width: calc(100% - 0.5em);
-    height: 1.667em;
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
     font-weight: bold;
-    font-size: 1.33em;
-    line-height: 1.667em;
-    padding: 0.125em 0.25em;
-    background-color: #DDD;
   }
-  .md-dialog .md-dialog-header-close-btn {
-    position: absolute;
-    font-weight: bold;
-    top: 0;
-    right: 0;
-    width: 0.875em;
-    height: 0.875em;
-    line-height: 1em;
-    padding: 0.1em;
-    color: #7F7F7F;
-  }
-  .md-dialog .md-dialog-header-close-btn:before {
-    content: '\2715';
-  }
-  .md-dialog .md-dialog-header-close-btn:hover,
-  .md-dialog .md-dialog-header-close-btn:focus {
-    color: #FFF;
+  
+  .close:hover,
+  .close:focus {
+    color: black;
     text-decoration: none;
     cursor: pointer;
-    background: #F00;
-  }
-  .md-dialog .md-dialog-content {
-    width: 100%;
-    padding: 0.25em;
-  }
-  
-  
-  /** Example Dark Theme */
-  .md-theme-dark.md-dialog {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  .md-theme-dark.md-dialog .md-dialog-window {
-    border: 1px solid #666;
-    background-color: #111;
-    color: #EEE;
-  }
-  .md-theme-dark.md-dialog .md-dialog-header {
-    background-color: #000;
-  }
-  .md-theme-dark.md-dialog .md-dialog-header-close-btn {}
-  .md-theme-dark.md-dialog .md-dialog-header-close-btn:hover,
-  .md-theme-dark.md-dialog .md-dialog-header-close-btn:focus {}
-  .md-theme-dark.md-dialog .md-dialog-content {}
+  } 
