--- a/Views/app.html
+++ b/Views/app.html
@@ -1,2 +1,10 @@
 <div ng-controller="PayUsingPayoneerView">
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Some text in the Modal..</p>
+    </div>
 </div>
