--- a/Views/app.html
+++ b/Views/app.html
@@ -1,10 +1,9 @@
 <div ng-controller="PayUsingPayoneerView">
 
-  <div id="my_modal" class="modal">
-    <div class="modal_content">
-      <span class="close_modal_window">×</span>
-      <p>Some text...</p>
-    </div>
-  </div>
+  <table class="table table-condensed table-bordered table-sm">
+    <thead><tr><th>Id</th><th>Тип</th><th>Ім'я</th><th>Статус</th></tr></thead>
+    <tbody>
+    </tbody>
+</table>
 
 </div>
