--- a/Views/PayWithPayoneerView.html
+++ b/Views/PayWithPayoneerView.html
@@ -1,4 +1,5 @@
-<div ng-controller="PayWithPayoneerView">
-  <lw-control class="pluggable-section" modulename="PayWithPayoneerView" controlname="PayWithPayoneerView" data="getData"></lw-control>
-  <h1>some text</h1>
-</div>
+<lw-control class="pluggable-section" modulename="PayWithPayoneerView" controlname="PayWithPayoneerView" data="getData">
+  <div ng-controller="PayWithPayoneerView">
+    <h1>some text</h1>
+  </div>
+</lw-control>
