--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,4 +1,4 @@
 <div ng-controller="PayWithPayoneerView">
-  <!-- <lw-control class="pluggable-section" modulename="PayWithPayoneerView" controlname="PayWithPayoneerView" data="getData"></lw-control> -->
   <h1>some text</h1>
+  <p>some content</p>
 </div>
