added test frame to azure app

--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,4 +1,5 @@
 <div ng-controller="PayWithPayoneerView">
   <h1>some text</h1>
   <p>some content</p>
+  <iframe src="https://test-app-lp.azurewebsites.net/" name="myFrame" width="100%"></iframe>
 </div>
