--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,5 +1,5 @@
 <div ng-controller="PayWithPayoneerView">
   <h1>some text</h1>
-  <p>some content</p>
+  <p>some content 123</p>
   <iframe src="https://test-app-lp.azurewebsites.net/" name="myFrame" width="100%"></iframe>
 </div>
