--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,4 +1,20 @@
 <div ng-controller="PayWithPayoneerView">
   <h1>some text</h1>
   <p>some content 123</p>
+
+  <div>
+    <button ng-click="page='first'">First</button>
+    <button ng-click="page='second'">Second</button>
+  </div>
+
+
+  <div ng-init="page='first'"></div>
+
+  <div ng-show="page === 'first'">
+    <h2>First</h2>
+  </div>
+
+  <div ng-show="page === 'second'">
+    <h2>Second</h2>
+  </div>
 </div>
