--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -12,7 +12,7 @@
 
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
-    <table>
+    <table ng-if="items">
       <tr>
         <th>SKU</th>
         <th>Ordered Qty</th>
@@ -20,7 +20,7 @@
         <th>Price</th>
         <th>Qty To Pay</th>
      </tr>
-      <tr ng-if="items" ng-repeat="i in items">
+      <tr ng-repeat="i in items">
         <td>{{ i.SKU }}</td>
         <td>{{ i.OrderedQty }}</td>
         <td>{{ i.PaidQty }}</td>
