added grid to html

--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -7,6 +7,9 @@
   </div>
 
   <div ng-init="page='byItem'"></div>
+  <div>
+    <div class="grid-canvas grid-canvas-top grid-canvas-left" tabindex="0" hidefocus="" style="width: 912px; height: 246px;"></div>
+  </div>
 
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
