--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,5 +1,5 @@
 <div ng-controller="PayWithPayoneerView">
-  
+
   <p>{{ testVar }}</p>
 
   <div>
@@ -12,7 +12,7 @@
 
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
-    <table ng-if="items">
+    <table >
       <tr>
         <th>SKU</th>
         <th>Ordered Qty</th>
