--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -20,6 +20,8 @@
   <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
   
 </div>
+
+<div class="slickgrid itemsgrid slickgrid" id="myGrid" style="width:600px;height:500px;"></div>
     <table >
       <tr>
         <th>SKU</th>
