--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -21,7 +21,7 @@
   
 </div>
 
-<div class="slickgrid itemsgrid slickgrid" id="myGrid" style="width:600px;height:500px;"></div>
+<div class="slickgrid itemsgrid slickgrid ui-widget" id="myGrid" style="width:600px;height:500px;"></div>
     <table >
       <tr>
         <th>SKU</th>
