--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -13,13 +13,13 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-<div ng-transclude="" class="slickgrid itemsgrid slickgrid slickgrid_867461 ui-widget" lw-tst="grid"
+<!-- <div ng-transclude="" class="slickgrid itemsgrid slickgrid slickgrid_867461 ui-widget" lw-tst="grid"
   columnpicker="false" enabletextselectiononcells="true"
   style="width: 100%; min-height: 200px; outline: 0px; position: relative;" name="purchaseOrdersGrid" editable="true"
   autoedit="true" multiselect="true" on-grid-loaded="onGridLoaded(scope);">
   <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
   
-</div>
+</div> -->
 
 <div class="slickgrid itemsgrid slickgrid ui-widget" id="myGrid" style="width:600px;height:500px;"></div>
     <table >
