--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,7 +14,7 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-    <div class="linngrid"></div>
+    <div class="linngrid itemsgridwrapper"></div>
 
 
     <table>
