--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,7 +14,11 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-    <div class="linngrid itemsgridwrapper"></div>
+    <div class="linngrid itemsgrid"></div>
+
+    <div ng-transclude="" class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
+      style="width: 100%; min-height: 400px; outline: 0px; position: relative;" name="purchaseOrdersGrid"
+      forcefitcolumns="true"></div>
 
 
     <table>
