--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -16,7 +16,7 @@
 
     <div class="linngrid itemsgrid"></div>
 
-    <div ng-transclude="" class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
+    <div class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
       style="width: 100%; min-height: 400px; outline: 0px; position: relative;" name="purchaseOrdersGrid"
       forcefitcolumns="true"></div>
 
