--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,7 +14,7 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-    <div class="linngrid itemsgrid"></div>
+    <div class="linngrid itemsgrid" id="igpwp"></div>
 
     <div class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
       style="width: 100%; min-height: 400px; outline: 0px; position: relative;" name="purchaseOrdersGrid"
