--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -16,9 +16,9 @@
 
     <div class="linngrid itemsgrid" id="igpwp"></div>
 
-    <div ng-transclude class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
+    <!-- <div ng-transclude class="slickgrid ui-widget" lw-tst="grid" enabletextselectiononcells="true"
       style="width: 100%; min-height: 400px; outline: 0px; position: relative;" name="purchaseOrdersGrid"
-      forcefitcolumns="true"></div>
+      forcefitcolumns="true"></div> -->
 
     <table>
       <tr>
