--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -79,114 +79,6 @@
 </div>
 
 
-
-
-
-
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <title>SlickGrid example 10: Async post render</title>
-  <link rel="stylesheet" href="../slick.grid.css" type="text/css" />
-  <link rel="stylesheet" href="../css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css" />
-  <link rel="stylesheet" href="examples.css" type="text/css" />
-  <style>
-    .cell-title {
-      font-weight: bold;
-    }
-
-    .cell-effort-driven {
-      text-align: center;
-    }
-
-    .description * {
-      font-size: 11pt;
-    }
-  </style>
-</head>
-
-<body>
-  <div style="width:600px;float:left;">
-    <div class="grid-header" style="width:100%">
-      <label>Scores:</label>
-    </div>
-    <div id="myGrid" style="width:100%;height:500px;"></div>
-  </div>
-
-  
-
-  <script src="../lib/firebugx.js"></script>
-
-  <script src="../lib/jquery-1.7.min.js"></script>
-  <script src="../lib/jquery-ui-1.8.16.custom.min.js"></script>
-  <script src="../lib/jquery.event.drag-2.2.js"></script>
-  <script src="../lib/jquery.sparkline.min.js"></script>
-
-  <script src="../slick.core.js"></script>
-  <script src="../slick.editors.js"></script>
-  <script src="../slick.grid.js"></script>
-
-  <script>
-    function requiredFieldValidator(value) {
-      if (value == null || value == undefined || !value.length) {
-        return { valid: false, msg: "This is a required field" };
-      } else {
-        return { valid: true, msg: null };
-      }
-    }
-
-    function waitingFormatter(value) {
-      return "wait...";
-    }
-
-    function renderSparkline(cellNode, row, dataContext, colDef) {
-      var vals = [
-        dataContext["n1"],
-        dataContext["n2"],
-        dataContext["n3"],
-        dataContext["n4"],
-        dataContext["n5"]
-      ];
-
-      $(cellNode).empty().sparkline(vals, { width: "100%" });
-    }
-
-    var grid;
-    var data = [];
-    var columns = [
-      { id: "title", name: "Title", field: "title", sortable: false, width: 120, cssClass: "cell-title" },
-      { id: "n1", name: "1", field: "n1", sortable: false, editor: Slick.Editors.Integer, width: 40, validator: requiredFieldValidator },
-      { id: "n2", name: "2", field: "n2", sortable: false, editor: Slick.Editors.Integer, width: 40, validator: requiredFieldValidator },
-      { id: "n3", name: "3", field: "n3", sortable: false, editor: Slick.Editors.Integer, width: 40, validator: requiredFieldValidator },
-      { id: "n4", name: "4", field: "n4", sortable: false, editor: Slick.Editors.Integer, width: 40, validator: requiredFieldValidator },
-      { id: "n5", name: "5", field: "n5", sortable: false, editor: Slick.Editors.Integer, width: 40, validator: requiredFieldValidator },
-      { id: "chart", name: "Chart", sortable: false, width: 60, formatter: waitingFormatter, rerenderOnResize: true, asyncPostRender: renderSparkline }
-    ];
-
-    var options = {
-      editable: true,
-      enableAddRow: false,
-      enableCellNavigation: true,
-      asyncEditorLoading: false,
-      enableAsyncPostRender: true
-    };
-
-
-    $(function () {
-      for (var i = 0; i < 500; i++) {
-        var d = (data[i] = {});
-
-        d["title"] = "Record " + i;
-        d["n1"] = Math.round(Math.random() * 10);
-        d["n2"] = Math.round(Math.random() * 10);
-        d["n3"] = Math.round(Math.random() * 10);
-        d["n4"] = Math.round(Math.random() * 10);
-        d["n5"] = Math.round(Math.random() * 10);
-      }
-
-      grid = new Slick.Grid("#myGrid", data, columns, options);
-    })
-  </script>
-</body>
-
+<div id="myGrid" style="width:600px;height:500px;"></div>
 
 </div>
