--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -79,6 +79,6 @@
 </div>
 
 
-<div id="myGrid" style="width:600px;height:500px;"></div>
+<div id="myGrid123" style="width:400px;height:200px;"></div>
 
 </div>
