--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -81,4 +81,14 @@
 
 <div id="myGrid123" style="width:400px;height:200px;"></div>
 
+<p>grid</p>
+
+<div class="linngrid">
+  <div class="slickgrid ui-widget" lw-tst="grid"
+    style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="purchaseOrdersGrid">
+    <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
+    
+  </div>
+</div>
+
 </div>
