--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,8 +14,6 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-    <div class="linngrid itemsgrid" id="igpwp"></div>
-
     <table class="generic-module-layout">
       <tbody>
         <tr>
@@ -79,13 +77,13 @@
 </div>
 
 
-<div id="myGrid123" style="width:400px;height:200px;"></div>
+<div id="myGrid123" style="width:600px;height:200px;"></div>
 
 <p>grid</p>
 
 <div class="linngrid">
   <div class="slickgrid ui-widget" id="myGrid123" lw-tst="grid"
-    style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="purchaseOrdersGrid">
+    style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="itemsGrid">
     <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
     
   </div>
