--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -78,6 +78,7 @@
 
 
 <div id="myGrid123" style="width:600px;height:200px;"></div>
+<div id="myGrid" style="width:600px;height:500px;"></div>
 
 <p>grid</p>
 
