--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -6,6 +6,7 @@
   <div>
     <button class="pwpButton" ng-click="page='byItem'">By Item</button>
     <button ng-click="page='byAmount'">By Amount</button>
+    <button ng-click="refreshData()">Update data</button>
   </div>
 
   <div ng-init="page='byItem'"></div>
