--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,9 +1,7 @@
 <div ng-controller="PayWithPayoneerView">
-  <script src="http://mleibman.github.com/SlickGrid/slick.grid.css"></script>
-<script src="http://mleibman.github.com/SlickGrid/slick.core.js"></script>
-<script src="http://mleibman.github.com/SlickGrid/slick.grid.js"></script>
-<script src="http://mleibman.github.com/SlickGrid/lib/jquery.event.drag-2.2.js"></script>
-<script src="http://mleibman.github.com/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.css">
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.core.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.js"></script>
 
   <p>{{ testVar }}</p>
 
