--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -35,7 +35,7 @@
 <p>grid</p>
 
 <div class="linngrid">
-  <div class="slickgrid ui-widget" id="pwpByItemGrid" lw-tst="grid"
+  <div class="slickgrid ui-widget" id="asdf" lw-tst="grid"
     style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="itemsGrid">
     <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
   </div>
