--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -18,7 +18,7 @@
   <div ng-show="page === 'byItem'">
     <h2>PO Items</h2>
 
-    <div class="linngrid" id="pwpByItemGrid" style="width:600px;height:200px;"></div>
+    
 
   </div>
 
@@ -26,6 +26,8 @@
     <h2>PO Items</h2>
 
   </div>
+
+  <div id="pwpByItemGrid" style="width:600px;height:200px;"></div>
 
   <h2>Payment History</h2>
 
