--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -27,7 +27,8 @@
 
   </div>
 
-  <div id="pwpByItemGrid" style="width:600px;height:200px;"></div>
+  <!-- <div id="pwpByItemGrid" style="width:600px;height:200px;"></div> -->
+  <div id="pwpByItemGrid"></div>
 
   <h2>Payment History</h2>
 
