--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -27,8 +27,7 @@
 
   </div>
 
-  <!-- <div id="pwpByItemGrid" style="width:600px;height:200px;"></div> -->
-  <div id="pwpByItemGrid"></div>
+  <div id="pwpByItemGrid" style="min-width:600px;min-height:2px;"></div>
 
   <h2>Payment History</h2>
 
