--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -27,7 +27,7 @@
 
   </div>
 
-  <div id="pwpByItemGrid" style="min-width:600px;min-height:2px;"></div>
+  <div id="pwpByItemGrid" style="min-width:600px;height:200px;"></div>
 
   <h2>Payment History</h2>
 
