--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -26,7 +26,7 @@
     <h2>PO Items</h2>
 
   </div>
-  
+
 
   <div id="pwpByItemGrid" style="min-width:600px;height:200px;"></div>
 
@@ -35,7 +35,7 @@
 </div>
 
 
-<p>grid</p>
+<p>grid1</p>
 
 <div class="linngrid">
   <div class="slickgrid ui-widget" id="asdf" lw-tst="grid"
