--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -28,7 +28,7 @@
   </div>
 
 
-  <div id="pwpByItemGrid" style="min-width:600px;height:200px;"></div>
+  <div class="linngrid" id="pwpByItemGrid" style="min-width:600px;height:200px;"></div>
 
   <h2>Payment History</h2>
 
