--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -7,8 +7,8 @@
 
 
   <div>
-    <button class="pwpButton" ng-click="page='byItem'">By Item</button>
-    <button ng-click="page='byAmount'">By Amount</button>
+    <button class="btn btn-primary" ng-click="page='byItem'">By Item</button>
+    <button class="btn btn-primary" ng-click="page='byAmount'">By Amount</button>
     <button ng-click="refreshData()">Update data</button>
   </div>
 
