--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -18,7 +18,7 @@
               <li data-index="1" lw-tst="tab_Supply" class=""><a>
                   <lw-tab-header lw-tst="tab_Supply" class="">Supply</lw-tab-header>
                 </a></li>
-              
+
             </ul>
           </td>
         </tr>
@@ -47,7 +47,7 @@
                   </tbody>
                 </table>
               </div>
-              
+
               <div class="tab-pane position-relative" data-index="6">
                 <div style="height:260px;">
                   <table lw-tst="grid_SoldStats" class="lw-table" style="margin-bottom: 0;">
@@ -74,6 +74,17 @@
         </tr>
       </tbody>
     </table>
+    <lw-tab-set lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
+      <lw-tab class="active" data-index="0">
+
+
+      </lw-tab>
+
+      <lw-tab data-index="1">
+
+
+      </lw-tab>
+    </lw-tab-set>
   </section>
 
 
