--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -13,10 +13,10 @@
             <ul class="nav nav-tabs" ng-class="{'nav-justified' : justified === 'true'}"
               ng-hide="tabSet.shouldHideHeader();">
               <li class="active" data-index="0" lw-tst="tab_Stock"><a>
-                  <lw-tab-header lw-tst="tab_Stock" class="active">Stock</lw-tab-header>
+                  <lw-tab-header lw-tst="tab_Stock" class="active">By Item</lw-tab-header>
                 </a></li>
               <li data-index="1" lw-tst="tab_Supply" class=""><a>
-                  <lw-tab-header lw-tst="tab_Supply" class="">Supply</lw-tab-header>
+                  <lw-tab-header lw-tst="tab_Supply" class="">By Amount</lw-tab-header>
                 </a></li>
 
             </ul>
@@ -30,6 +30,7 @@
                   <tbody>
                     <tr>
                       <td class="flexible-content">
+                        <p>By Item Content</p>
 
                       </td>
                     </tr>
@@ -41,6 +42,7 @@
                   <tbody>
                     <tr>
                       <td class="flexible-content">
+                        <p>By Amount Content</p>
 
                       </td>
                     </tr>
