--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,9 +1,4 @@
 <div ng-controller="PayWithPayoneerView">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.css">
-  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.core.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.js"></script>
-
-  <p>{{ testVar }}</p>
 
   <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
@@ -18,7 +13,6 @@
               <li data-index="1" lw-tst="tab_Supply" class=""><a>
                   <lw-tab-header lw-tst="tab_Supply" class="">By Amount</lw-tab-header>
                 </a></li>
-
             </ul>
           </td>
         </tr>
@@ -76,20 +70,16 @@
     </lw-tab-set>
   </section>
 
-  
+
 
   <h2>Payment History</h2>
 
 </div>
 
 
-<p>grid1</p>
-
-<!-- <div class="linngrid">
-  <div class="slickgrid ui-widget" id="asdf" lw-tst="grid"
-    style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="itemsGrid">
+<div class="linngrid">
+  <div class="slickgrid ui-widget" id="pwpByItemGrid" lw-tst="grid"
+    style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="pwpItemsGrid">
     <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
   </div>
-</div> -->
-
 </div>
