--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -79,7 +79,7 @@
 
 
 <div class="linngrid">
-  <div class="slickgrid ui-widget" id="pwpByItemGrid" lw-tst="grid"
+  <div class="slickgrid1 ui-widget" id="pwpByItemGrid" lw-tst="grid"
     style="width: 100%; min-height: 300px; outline: 0px; position: relative;" name="pwpItemsGrid">
     <div tabindex="0" hidefocus="" style="position:fixed;width:0;height:0;top:0;left:0;outline:0;"></div>
   </div>
