--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -47,7 +47,7 @@
                       <td class="flexible-content">
                         <p>By Amount Content</p>
 
-                        <div id="pwpByItemGrid" style="min-width:600px;height:200px;"></div>
+                        <div id="pwpByItemGrid" style="width: 100%; min-height: 200px; outline: 0px; position: relative;"></div>
 
                         <button class="btn btn-primary" ng-click="refreshData()">Pay</button>
                       </td>
