--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,6 +1,9 @@
 <div ng-controller="PayWithPayoneerView">
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.editors.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.formatters.js"></script>
+  
   <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
       <tbody>
