--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -77,10 +77,7 @@
 
   <h2>Payment History</h2>
 
-  <div class="slickgrid itemsgrid slickgrid ui-widget" lw-tst="grid" columnpicker="false"
-    enabletextselectiononcells="true" style="width: 100%; min-height: 200px; outline: 0px; position: relative;"
-    name="pwpGrid" editable="true" autoedit="true" multiselect="true" on-grid-loaded="onGridLoaded(scope);">
-  </div>
+  <div ng-transclude class="slickgrid pwpGrid"></div>
 
 </div>
 
